# cpp-boilerplate

./: .nvimrc  CMakeLists.txt
.vim/: coc-settings.json
src/: main.cpp
